Absolute grid snap don't work properly with custom grid scale #58659

Closed
opened 2018-12-03 22:46:59 +01:00 by Kamil Makowski · 5 comments

System Information
Operating system: Windows 10
Graphics card: GTX970

Blender Version
Broken: 2.80, a205493426 2018 11 29

Short description of error
Absolute grid snap don't work properly with custom grid scale.

Exact steps for others to reproduce the error
AbsoluteGridSnapIssue.blend

System Information Operating system: Windows 10 Graphics card: GTX970 Blender Version Broken: 2.80, a205493426b 2018 11 29 Short description of error Absolute grid snap don't work properly with custom grid scale. Exact steps for others to reproduce the error [AbsoluteGridSnapIssue.blend](https://archive.blender.org/developer/F5804402/AbsoluteGridSnapIssue.blend)
Author

Added subscriber: @kamilozo

Added subscriber: @kamilozo

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I've found the cause of the issue and it should be fixed with https://developer.blender.org/D4039

I've found the cause of the issue and it should be fixed with https://developer.blender.org/D4039
Sebastian Parborg self-assigned this 2018-12-06 11:25:18 +01:00

This issue was referenced by e850ae14ee

This issue was referenced by e850ae14ee8b44f126e986c37ee4307ed64c14d1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58659
No description provided.