Fix T58659: absolute grid snapping wrong with custom grid scale.

Differential Revision: https://developer.blender.org/D4039